# tuberculosis_detection

./: .envrc  .gitignore  Dockerfile  README.md  inference_main.py  pyproject.toml  setup.py
example_template/: __init__.py
model_cnn/: __init__.py  constants.py  dataset.py  evaluation.py  inference.py  inference_main.py  main.py  model.py  training.py  visualization_utils.py
model_cnn/configs/: densenet121.yaml
templates/: index.html
tests_functional/: conftest.py
tests_scripting/: requirements_extra.txt
tests_unit/: conftest.py
